# tenso

./: .gitignore  CHANGELOG.md  LICENSE  README.md  benchmark.py  benchmark_io.py  pyproject.toml  test.py
.github/workflows/: docs.yml  release.yml  test.yml
docs/: index.html
docs/source/: api.rst  conf.py  index.rst
examples/: client.py  server.py
src/tenso/: __init__.py  async_core.py  config.py  core.py  fastapi.py  gpu.py  utils.py
tests/: test_advanced.py  test_async.py  test_core.py  test_fastapi.py  test_gpu.py  test_stream.py  test_utils.py
